[package]
name = "initials"
version = "0.1.2"
description = """
initials avatar for rust
"""
authors = ["sonmezonur"]
documentation = "https://sonmezonur.github.io/initials.rs"
homepage = "https://github.com/sonmezonur/initials.rs"
repository = "https://github.com/sonmezonur/initials.rs.git"
readme = "README.md"
keywords = ["image", "avatar", "processing", "initial"]
categories = ["multimedia", "multimedia::images", "rendering"]
license = "MIT"

[lib]
name = "initials"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "bin/main.rs"

[dependencies]
failure = "0.1.2"
image = "0.19.0"
rusttype = "0.6.4"
rand = "0.5.5"
